[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template with Flask and Instagrapi."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"  # Allow 3.13.4 also
flask = "^3.0.3"
requests = "^2.32.3"
instagrapi = "^1.19.5"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"
instagram_private_api = { git = "https://github.com/ping/instagram_private_api.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
