[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template with Flask and Instagrapi."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^3.0.3"
requests = "^2.32.3"
instagrapi = "^1.19.5"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
